# LabhPay

./: .gitignore  ARCHITECTURE.md  DECISIONS.md  IMPLEMENTATION_PLAN.md  README.md
ai_gateway/: __init__.py  budget.py  health.py  pool.py  router.py
ai_gateway/providers/: base.py  (+7 more)
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: admin.py  ai.py  assistant.py  auth.py  consent.py  dashboard.py  exports.py  health.py  intelligence.py  resolution.py  statements.py  tax.py
backend/app/core/: config.py  csrf.py  dependencies.py  redis_client.py  security.py  security_headers.py
backend/app/db/: users.py
backend/app/services/: activity.py  analytics.py  categorizer_llm.py  exports.py  google_auth.py  intelligence.py  notifynow.py  otp.py  phone.py  private_mode.py  profile.py  resolution.py  retrieval.py  signals.py  storage.py
docs/: STAGE_1_SUMMARY.md  STAGE_2_SUMMARY.md  STAGE_3_SUMMARY.md  STAGE_4_SUMMARY.md  STAGE_5_SUMMARY.md  STAGE_6_SUMMARY.md
frontend/: .dockerignore  Dockerfile  components.json  middleware.ts  next.config.mjs  package.json  tailwind.config.ts  vercel.json
infra/: docker-compose.yml
parsers/: __init__.py  _common.py  base.py  generic.py  hdfc.py  icici.py  registry.py  sbi.py
shared/: __init__.py  banks.py  categories.py  categorizer.py  merchant_directory.py  merchants.py
utils/: __init__.py  audit.py  crypto.py  logging.py  masking.py  pdf_extract.py  pdf_quality.py  session_keys.py
workers/: .dockerignore  Dockerfile  celery_app.py  requirements.txt
(+104 files in other folders)
